versioned_docs/version-2.13/reference/subsystems/junit.mdx
---
title: junit
description: |
  The JUnit test framework (https://junit.org)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The JUnit test framework (https://junit.org)

Backend: <span className="color--primary">`pants.backend.experimental.java`</span>

Config section: <span className="color--primary">`[junit]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--junit-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_JUNIT_ARGS'
  toml_repr={`[junit]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to JUnit, e.g. `--junit-args='--disable-ansi-colors'`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--junit-version=<str>`}
  env_repr='PANTS_JUNIT_VERSION'
  toml_repr={`[junit]
version = <str>`}
  default_repr={`5.7.2`}
>

Version string for the tool. This is available for substitution in the `[junit].artifacts` option by including the string `{version}`.

</Option>

### `artifacts`

<Option
  cli_repr={`--junit-artifacts="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JUNIT_ARTIFACTS'
  toml_repr={`[junit]
artifacts = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "org.junit.platform:junit-platform-console:1.7.2",\n  "org.junit.jupiter:junit-jupiter-engine:{version}",\n  "org.junit.vintage:junit-vintage-engine:{version}"\n]`}
>

Artifact requirements for this tool using specified as either the address of a `jvm_artifact` target or, alternatively, as a colon-separated Maven coordinates (e.g., group:name:version). For Maven coordinates, the string `{version}` version will be substituted with the value of the `[junit].version` option.

</Option>

### `lockfile`

<Option
  cli_repr={`--junit-lockfile=<str>`}
  env_repr='PANTS_JUNIT_LOCKFILE'
  toml_repr={`[junit]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.13.1/src/python/pants/jvm/test/junit.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants jvm-generate-lockfiles --resolve=junit`.

</Option>

### `jvm_options`

<Option
  cli_repr={`--junit-jvm-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JUNIT_JVM_OPTIONS'
  toml_repr={`[junit]
jvm_options = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

List of JVM options to pass to `junit` JVM processes.

Options set here will be added to those set in `[jvm].global_options`. Please check the documentation for the `jvm` subsystem to see what values are accepted here.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
